SONARPHP-1428 Migrate jUnit4 to jUnit5 in its/ruling